ckanext/who_afro/assets/css/who-afro.css
/* ... */
/* tabs */
.user-profile-page .secondary {
    content: none;
    display: none;
}

.user-profile-page .wrapper .primary {
    width: 100%;
    border: 0;
}

.user-profile-page .wrapper:before {
    border-right: 0;
}

.user-profile-page .wrapper {
    box-shadow: none;
    border: 0;
}

.user-profile-page .page-header {
    background-color: white;
}

.user-profile-page div.module-content {
    border: var(--who-blue-65-percent) thin solid;
    border-top: none;
}

.user-profile-page header,
.user-profile-page header ul.nav.nav-tabs {
    width: calc(100% + 1px);
}

.user-profile-page header ul.nav.nav-tabs li:first-child {
    width: 25%;
}

.user-profile-page header ul.nav.nav-tabs li:not(:first-child) {
    width: 24.3%;
    margin-left: 0.7%;
}

.user-profile-page header ul.nav.nav-tabs li:last-child {
    width: 24.3%;
    margin-left: 0.7%;
}

.user-profile-page .page-header .nav-tabs li.active a {
    border: var(--who-blue-65-percent) thin solid;
    background-color: white;
    border-bottom-color: transparent;
}

.user-profile-page .nav-tabs .nav-link, .user-profile-page .page-header .nav-tabs li a,
.user-profile-page .nav-tabs .nav-link, .user-profile-page .page-header .nav-tabs li a:hover {
    background-color: var(--who-blue-ten-percent);
}

.user-profile-page .nav-tabs,
.user-profile-page .nav-tabs .nav-link,
.user-profile-page .page-header .nav-tabs li a {
    border-bottom-color: var(--who-blue-65-percent);
}

.user-profile-page .nav.nav-tabs li a {
    color: var(--primary-navy);
    font-size: 16px;
    font-weight: 700;
    line-height: 20px;
    text-align: center;
}

@media only screen and (max-width: 510px) {
    .user-profile-page header ul.nav.nav-tabs li {
        width: 100% !important;
    }
    .user-profile-page header ul.nav.nav-tabs li:first-child {
        margin-left: 4px;
    }
    .user-profile-page .nav.nav-tabs li a {
        text-align: left;
    }
    .user-profile-page .dashboard-add-team-btn {
        width: 100% !important;
        margin-top: 16px;
        margin-bottom: 16px;
    }

}

@media only screen and (max-width: 545px) {
    .user-dashboard-main .pull-right {
        float: none;
        width: 100%;
    }
    .user-dashboard-main #followee-popover {
        width: 100%;
    }
    .user-dashboard-main small.text-muted.fs-5 {
        text-align: center;
    }
}

.user-profile-page .page-header.module-content {
    padding: 0;
    width: 100%;
}

.dashboard-organisation-main article.module,
.user-dashboard-main article.module {
    padding: 0;
    margin-bottom: 115px;
}

.user-profile-page .media-grid .media-heading {
    margin: 8px 0 0;
}

.dashboard-organisation-main .media-grid {
    margin-bottom: 32px;
}


.user-profile-page .show-all-org,
.user-profile-page .show-all-org:hover,
.user-profile-page .show-all-pkg,
.user-profile-page .show-all-pkg:hover {
    font-size: 16px;
    font-weight: 700;
    line-height: 24px;
    text-decoration: underline;
}

@media only screen and (max-width: 462px) {
  .user-profile-page #activity_page_buttons,
  #activity_page_buttons a.btn {
    margin-top: 16px;
    width: 100%;
    }
}

/* header navbar */
@media only screen and (min-width: 992px) {
    .masthead .main-navbar ul li.active a {
        color: var(--primary-navy) !important;
    }
    
    .masthead .main-navbar ul li.active.my_account {
        pointer-events: auto;
    }

    .masthead .main-navbar ul li.active a {
        padding-bottom: 47px !important;
        border-bottom: var(--secondary-who-blue) 4px solid;
        border-radius: 0;
        z-index: 0;
    }

}

ol.profile-page.breadcrumb {
    width: 100%;
}
/* User profile*/


.additional-info .scheming-group-title{
    margin-top: 30px;
}

.resources h2, .additional-info h2{
    border-bottom: 1px solid #ddd;
}

.resources .resource-list{
    margin-top: 30px;
}

.page-header .nav-tabs li a{
    color: var(--primary-navy);
}

ul.icon-list {
    -moz-column-count: 3;
    column-count: 3;
    list-style: none;
    padding-left: 0;
    margin-top: 70px;
}

ul.icon-list li {
    margin-bottom: 10px;
    min-height: 70px;
    display: flex;
    page-break-inside: avoid;
    -moz-column-break-inside: avoid;
    break-inside: avoid;
}

ul.icon-list li .views-field-icon {
    float: left;
    width: 50px;
    margin-right: 5%;
}

ul.icon-list li .views-field-title {
    width: 75%;
    align-self: center;
}

ul.icon-list li .views-field-icon img {
    border: none !important;
    border-radius: 50%;
    height: 50px;
    width: 50px;
}

div.sources-page > div.container {
    margin-top: 50px;
    margin-bottom: 20px;
}

div.sources-page > div.container div.row {
    padding-left: 0px;
    margin-top: 20px;
    margin-bottom: 40px;
}

.sources-page .sources img{
    width: 100%;
    margin-bottom: 1rem;
}


.other-insights-btn{
    margin-top: 20px;
    text-align: center;
}

.promoted-breadcrumbs > .container {
    padding: 0px;
}

.dataset .toolbar{
    margin: 0px;
    padding: 0px;
}

.dataset.promoted-background .promoted{
    width: 75%;
    margin-bottom: 0px;
    background: rgba(23,27,56,0);
    background: linear-gradient(90deg, rgba(23,27,56,1) 0%, rgba(23,27,48,0.8547794117647058) 74%, rgba(23,27,56,0) 100%);
}

@media (max-width: 627px) {
.dataset.promoted-background > .container,
.dataset.promoted-background > .container .toolbar > .container{
    padding-left: 0px;
}
.dataset.promoted-background .promoted{
    width: 100%;
  }
}



.promoted .headline a{
    color: white;
    font-weight: 400;
    height: 36px;
    line-height: 48px;
}

.promoted .badge{
    background: var(--secondary-who-blue);
    margin-right: 20px;
    margin-bottom: 20px;
}

.promoted .modified{
    display: inline-block;
    margin-bottom: 20px;
}

.promoted-background .content_action{
    position: absolute;
    z-index: 1;
    top: 64px;
    right: -5px;
}

.promoted-background .nav-tabs{
    position: relative;
    display: flex;
    border-bottom: none;
    padding: 0px 20px;
}
/* ... */

